# CroixPharmacie

./: .gitignore  README.md  pyproject.toml  requirements.txt  rubikscross.py
src/croix_pharmacie/: pharmacontroller.py
src/croix_pharmacie/scripts/: doom.py  game_of_life.py  maze.py  rubikscross_game.py  snake.py
